--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -158,7 +158,7 @@ CameraSpeed=3
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Cats/Widget
-ContentBrowserTab1.SelectedPaths=/Game/Cats/Assets/Props
+ContentBrowserTab1.SelectedPaths=/Game/Cats/Map
 None=======
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
@@ -260,7 +260,7 @@ LastLevel=/Game/Cats/Map/ThirdPersonMap
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" "
 WorldPartitionRuntimeHash="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[3]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[4]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[5]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 GeneralProjectSettings="\"Object\" "
 CryptoKeysSettings="\"Object\" "
 GameplayTagsSettings="\"Object\" "
@@ -366,10 +366,10 @@ Material="\"Object\" "
 MaterialInterface="\"Object\" "
 SkeletalMeshComponent="\"Object\" "
 SkinnedMeshComponent="\"Object\" "
-MeshComponent="\"Object\" "
-PrimitiveComponent="\"Object\" "
-SceneComponent="\"Object\" "
-ActorComponent="\"Object\" "
+MeshComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[3]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[4]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[5]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PrimitiveComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[3]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[4]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[5]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SceneComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[3]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[4]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[5]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ActorComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[3]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[4]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[5]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" "
 MaterialExpressionTextureSample="\"Object\" "
@@ -432,7 +432,7 @@ NavMeshBoundsVolume="\"Object\" \"Object.BrushBuilder.BrushBuilder.Object.BrushS
 Volume="\"Object\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BrushComponent="\"Object\" "
-StaticMeshComponent="\"Object\" "
+StaticMeshComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[3]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 FloatingPawnMovement="\"Object\" "
 PersonaPreviewSceneDescription="\"Object\" "
 PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
@@ -762,13 +762,6 @@ BoxOpen_C="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Cats/Blueprint/Cat.Cat
-OpenAssetsAtExit=/Game/Cats/Blueprint/BreakableProps/Box.Box
-OpenAssetsAtExit=/Game/Cats/Blueprint/BreakableProps/BoxOpen.BoxOpen
-OpenAssetsAtExit=/Game/Cats/Blueprint/BreakableProps/Bucket.Bucket
-OpenAssetsAtExit=/Game/Cats/Blueprint/Component/C_ACT_Attack.C_ACT_Attack
-OpenAssetsAtExit=/Game/Cats/Blueprint/BreakableProps/FlowerPot.FlowerPot
-OpenAssetsAtExit=/Game/Cats/Blueprint/BreakableProps/BaseProps.BaseProps
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1884,7 +1877,7 @@ SceneComponent=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.Con
 Adults_C=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PostProcessVolume.Reflections.Reflections,PostProcessVolume.Lens.Lens
 Adults_C=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PostProcessVolume.Reflections.Reflections
 StaticMeshComponent=
-StaticMeshComponent=
+StaticMeshComponent=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,Cat_C.Collision.Collision,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PropertyWrapper.DefaultValueCategory.Object Types,PropertyWrapper.DefaultValueCategory.PowerUpData,PropertyWrapper.DefaultValueCategory.Struct,PostProcessVolume.Reflections.Reflections,PostProcessVolume.Lens.Lens,K2Node_FunctionEntry.Inputs.9B801AA847C2ED81AA37ADB66B6AC0FF,K2Node_VariableGet.DefaultValueCategory.Object Types,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,GameMapsSettings.DefaultModes.SelectedGameModeDetails,GeometryCollectionComponent.Collision.Collision,GeometryCollectionComponent.Physics.ConstraintsGroup,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,WidgetComponent.Physics.ConstraintsGroup,WidgetComponent.Collision.Collision
 StaticMeshActor=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PostProcessVolume.Reflections.Reflections,PostProcessVolume.Lens.Lens
 StaticMeshActor=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,Cat_C.Collision.Collision,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PropertyWrapper.DefaultValueCategory.Object Types,PropertyWrapper.DefaultValueCategory.PowerUpData,PropertyWrapper.DefaultValueCategory.Struct,PostProcessVolume.Reflections.Reflections,PostProcessVolume.Lens.Lens,K2Node_FunctionEntry.Inputs.9B801AA847C2ED81AA37ADB66B6AC0FF,K2Node_VariableGet.DefaultValueCategory.Object Types,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,GameMapsSettings.DefaultModes.SelectedGameModeDetails,GeometryCollectionComponent.Collision.Collision,GeometryCollectionComponent.Physics.ConstraintsGroup,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,WidgetComponent.Physics.ConstraintsGroup,WidgetComponent.Collision.Collision
 PropertyWrapper=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PostProcessVolume.Reflections.Reflections,K2Node_FunctionEntry.Inputs.9B801AA847C2ED81AA37ADB66B6AC0FF
@@ -5335,26 +5328,26 @@ bConvertSceneUnit=False
 LastLogListing=PIE
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Cats/Blueprint/BreakableProps/BaseProps
-MRUItem1=/Game/Cats/Blueprint/BreakableProps/Bucket
-MRUItem2=/Game/Cats/Blueprint/BreakableProps/Box
-MRUItem3=/Game/Cats/Map/ThirdPersonMap
-MRUItem4=/Game/Cats/Blueprint/BreakableProps/FlowerPot
-MRUItem5=/Game/Cats/Blueprint/Component/C_ACT_Attack
-MRUItem6=/Game/Cats/Blueprint/BreakableProps/BoxOpen
-MRUItem7=/Game/Cats/Blueprint/Cat
-MRUItem8=/Game/Cats/Blueprint/BreakableProps/Bottle
-MRUItem9=/Game/Cats/Assets/GeometryCollection/box_GC
-MRUItem10=/Game/Cats/Assets/GeometryCollection/bottle-large_GC
-MRUItem11=/Game/Cats/Blueprint/BreakableProps/Eggs
-MRUItem12=/Game/Cats/Assets/Niagara/NS_Cat_15
-MRUItem13=/Game/Cats/Blueprint/Component/C_ACT_CorruptedMiaou
-MRUItem14=/Game/Cats/Assets/Niagara/NS_Basic_15
-MRUItem15=/Game/Cats/Blueprint/Component/C_ACT_BaseMiaou
-MRUItem16=/Game/Basic_VFX/Demo/Map/Demo_map
-MRUItem17=/Game/Basic_VFX/Niagara/NS_Basic_15
-MRUItem18=/Game/Basic_VFX/Niagara/NS_Basic_3
-MRUItem19=/Game/Basic_VFX/Niagara/NS_Basic_11
+MRUItem0=/Game/Cats/Blueprint/BreakableProps/FlowerPot
+MRUItem1=/Game/Cats/Assets/GeometryCollection/box-large-open_GC
+MRUItem2=/Game/Cats/Blueprint/BreakableProps/BoxOpen
+MRUItem3=/Game/Cats/Blueprint/BreakableProps/Box
+MRUItem4=/Game/Cats/Map/ThirdPersonMap
+MRUItem5=/Game/Cats/Blueprint/BreakableProps/BaseProps
+MRUItem6=/Game/Cats/Blueprint/Component/C_ACT_Attack
+MRUItem7=/Game/Cats/Blueprint/BreakableProps/Bucket
+MRUItem8=/Game/Cats/Blueprint/Cat
+MRUItem9=/Game/Cats/Blueprint/BreakableProps/Bottle
+MRUItem10=/Game/Cats/Assets/GeometryCollection/box_GC
+MRUItem11=/Game/Cats/Assets/GeometryCollection/bottle-large_GC
+MRUItem12=/Game/Cats/Blueprint/BreakableProps/Eggs
+MRUItem13=/Game/Cats/Assets/Niagara/NS_Cat_15
+MRUItem14=/Game/Cats/Blueprint/Component/C_ACT_CorruptedMiaou
+MRUItem15=/Game/Cats/Assets/Niagara/NS_Basic_15
+MRUItem16=/Game/Cats/Blueprint/Component/C_ACT_BaseMiaou
+MRUItem17=/Game/Basic_VFX/Demo/Map/Demo_map
+MRUItem18=/Game/Basic_VFX/Niagara/NS_Basic_15
+MRUItem19=/Game/Basic_VFX/Niagara/NS_Basic_3
 
 [MaterialEditor]
 PrimType=1
@@ -5722,7 +5715,7 @@ None=======
 /Game/Cats/Widget/PowerUp/KarmaType.KarmaType=1
 /Game/Cats/Blueprint/Component/C_ACT_Attack_AOE.C_ACT_Attack_AOE=0
 /Game/Cats/Blueprint/BreakableProps/Bucket.Bucket=0
-/Game/Cats/Blueprint/BreakableProps/BaseProps.BaseProps=1
+/Game/Cats/Blueprint/BreakableProps/BaseProps.BaseProps=0
 /Game/Cats/Blueprint/Component/C_ACT_Range.C_ACT_Range=0
 /Game/Cats/Blueprint/Component/C_BaseAction.C_BaseAction=0
 /Game/Cats/Blueprint/Component/C_ACT_Jump.C_ACT_Jump=0
@@ -5743,6 +5736,7 @@ None=======
 /Game/Cats/Blueprint/Component/C_ACT_ProjectileBonus.C_ACT_ProjectileBonus=0
 /Game/Cats/Assets/Niagara/NS_Cat_15.NS_Cat_15=0
 /Game/Cats/Assets/GeometryCollection/bottle-large_GC.bottle-large_GC=1
+/Game/Cats/Assets/GeometryCollection/box-large-open_GC.box-large-open_GC=0
 
 [SelectionDetails]
 PreserveScaleRatio=True
@@ -5793,11 +5787,11 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [PlacementMode]
+RecentlyPlaced=/Game/Cats/Blueprint/BreakableProps/Box.Box;
 RecentlyPlaced=/Game/Cats/Blueprint/BreakableProps/BoxOpen.BoxOpen;
 RecentlyPlaced=/Game/Cats/Blueprint/BreakableProps/FlowerPot.FlowerPot;
 RecentlyPlaced=/Game/Cats/Blueprint/BreakableProps/Bottle.Bottle;
 RecentlyPlaced=/Game/Cats/Blueprint/BreakableProps/Bucket.Bucket;
-RecentlyPlaced=/Game/Cats/Blueprint/BreakableProps/Box.Box;
 RecentlyPlaced=/Script/Engine.ExponentialHeightFog;/Engine/Transient.ActorFactoryExponentialHeightFog_0
 RecentlyPlaced=/Game/Cats/Blueprint/CollectAttack3.CollectAttack3;
 RecentlyPlaced=/Game/Cats/Blueprint/SumonedMouse.SumonedMouse;
