Projectile bonus dropable
it wasn't...

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -775,6 +775,8 @@ FS_MasterField_2_C="\"Object\" \"Object.Default.TextDisplay\" \"Object.Field Set
 [AssetEditorSubsystem]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/Cats/Blueprint/BreakableProps/BaseProps.BaseProps
+OpenAssetsAtExit=/Game/Cats/Widget/PowerUp/DT_PowerUp.DT_PowerUp
+OpenAssetsAtExit=/Game/Cats/Blueprint/Component/C_ACT_ProjectileBonus.C_ACT_ProjectileBonus
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1886,7 +1888,7 @@ CapsuleComponent=
 SkeletalMeshComponent=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PostProcessVolume.Reflections.Reflections
 SkeletalMeshComponent=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,Cat_C.Collision.Collision,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PropertyWrapper.DefaultValueCategory.Object Types,PropertyWrapper.DefaultValueCategory.PowerUpData,PropertyWrapper.DefaultValueCategory.Struct,PostProcessVolume.Reflections.Reflections,PostProcessVolume.Lens.Lens,K2Node_FunctionEntry.Inputs.9B801AA847C2ED81AA37ADB66B6AC0FF,K2Node_VariableGet.DefaultValueCategory.Object Types,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,GameMapsSettings.DefaultModes.SelectedGameModeDetails,GeometryCollectionComponent.Collision.Collision,GeometryCollectionComponent.Physics.ConstraintsGroup,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,WidgetComponent.Physics.ConstraintsGroup,WidgetComponent.Collision.Collision
 SceneComponent=
-SceneComponent=
+SceneComponent=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,Cat_C.Collision.Collision,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PropertyWrapper.DefaultValueCategory.Object Types,PropertyWrapper.DefaultValueCategory.PowerUpData,PropertyWrapper.DefaultValueCategory.Struct,PostProcessVolume.Reflections.Reflections,PostProcessVolume.Lens.Lens,K2Node_FunctionEntry.Inputs.9B801AA847C2ED81AA37ADB66B6AC0FF,K2Node_VariableGet.DefaultValueCategory.Object Types,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,GameMapsSettings.DefaultModes.SelectedGameModeDetails,GeometryCollectionComponent.Collision.Collision,GeometryCollectionComponent.Physics.ConstraintsGroup,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,WidgetComponent.Physics.ConstraintsGroup,WidgetComponent.Collision.Collision
 Adults_C=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PostProcessVolume.Reflections.Reflections,PostProcessVolume.Lens.Lens
 Adults_C=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PostProcessVolume.Reflections.Reflections
 StaticMeshComponent=
@@ -5460,26 +5462,26 @@ bConvertSceneUnit=False
 LastLogListing=PIE
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Cats/Assets/Niagara/NS_Cat_15
-MRUItem1=/Game/Cats/Assets/Niagara/NS_Basic_16
-MRUItem2=/Game/Cats/Map/ThirdPersonMap
-MRUItem3=/Game/Cats/Blueprint/BreakableProps/BaseProps
-MRUItem4=/Game/Cats/Blueprint/FS_MasterField_2
-MRUItem5=/Game/Cats/Blueprint/CatStrainField
-MRUItem6=/Engine/EditorResources/FieldNodes/FS_MasterField
-MRUItem7=/Game/Cats/Blueprint/BreakableProps/Bucket
-MRUItem8=/Game/Cats/Blueprint/Component/C_ACT_AttackFix
-MRUItem9=/Game/Cats/Blueprint/Component/C_ACT_Attack
-MRUItem10=/Game/Cats/Blueprint/Cat
-MRUItem11=/Game/Cats/GameMode/MyGameMode
-MRUItem12=/Game/Cats/Assets/GeometryCollection/Bucket_GC
-MRUItem13=/Game/Cats/Blueprint/Component/C_ACT_CorruptedMiaou
-MRUItem14=/Game/Cats/Blueprint/Mouse
-MRUItem15=/Game/Cats/Widget/PowerUp/PowerUp
-MRUItem16=/Game/Cats/Blueprint/SumonedMouse
-MRUItem17=/Game/Cats/Widget/PowerUp/DT_PowerUp
-MRUItem18=/Game/Cats/Blueprint/BreakableProps/FlowerPot
-MRUItem19=/Game/Cats/Assets/GeometryCollection/box-large-open_GC
+MRUItem0=/Game/Cats/Blueprint/Component/C_ACT_ProjectileBonus
+MRUItem1=/Game/Cats/Widget/PowerUp/DT_PowerUp
+MRUItem2=/Game/Cats/Assets/Niagara/NS_Cat_15
+MRUItem3=/Game/Cats/Assets/Niagara/NS_Basic_16
+MRUItem4=/Game/Cats/Map/ThirdPersonMap
+MRUItem5=/Game/Cats/Blueprint/BreakableProps/BaseProps
+MRUItem6=/Game/Cats/Blueprint/FS_MasterField_2
+MRUItem7=/Game/Cats/Blueprint/CatStrainField
+MRUItem8=/Engine/EditorResources/FieldNodes/FS_MasterField
+MRUItem9=/Game/Cats/Blueprint/BreakableProps/Bucket
+MRUItem10=/Game/Cats/Blueprint/Component/C_ACT_AttackFix
+MRUItem11=/Game/Cats/Blueprint/Component/C_ACT_Attack
+MRUItem12=/Game/Cats/Blueprint/Cat
+MRUItem13=/Game/Cats/GameMode/MyGameMode
+MRUItem14=/Game/Cats/Assets/GeometryCollection/Bucket_GC
+MRUItem15=/Game/Cats/Blueprint/Component/C_ACT_CorruptedMiaou
+MRUItem16=/Game/Cats/Blueprint/Mouse
+MRUItem17=/Game/Cats/Widget/PowerUp/PowerUp
+MRUItem18=/Game/Cats/Blueprint/SumonedMouse
+MRUItem19=/Game/Cats/Blueprint/BreakableProps/FlowerPot
 
 [MaterialEditor]
 PrimType=1
